# RemoteCraft

./: .editorconfig  .env  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  main.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
Backend/: config.py  main.py  minecraft_service.py  test_api.py
frontend/: backups.html  console.html  files.html  index.html  logs.html  performance.html  players.html  servers.html  settings.html
frontend/css/: backups.css  console.css  dashboard.css  files.css  global.css  logs.css  performance.css  players.css  servers.css  settings.css
scripts/: install.sh
src/remotecraft/: __init__.py  __main__.py  api.py  config.py  errors.py  models.py  service.py  ssh.py  store.py  versions.py
src/remotecraft/web/: app.css  app.js  index.html
tests/: conftest.py  install_smoke.sh  test_api.py  test_config.py  test_service.py  test_ssh.py  test_store.py  test_versions.py
